--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                             <p class="hero__text">
                                 Scoot takes the hassle out of urban mobility. Our bikes are placed in convenient
                                 locations in each of our cities. Use our app to locate the nearest bike, unlock it with
-                                a tap, and you’re away!
+                                a tap, and you`re away!
                             </p>
                             <a class="button hero-btn" href="#">Get Scootin</a>
                         </div>
