--- a/index.html
+++ b/index.html
@@ -113,6 +113,47 @@
             </div>
         </section>
 
+
+
+        <section class="adv">
+            <div class="container">
+                <div class="adv__container">
+                    <ul class="adv-list">
+                        <li class="adv-list__item">
+                            <div class="adv__wrapper">
+                                <div class="adv__left">
+                                    <h2 class="adv__left__heading">Easy to use riding telemetry</h2>
+                                    <p class="adv__left__text">The Scoot app is available with riding telemetry. This
+                                        means it can show you your average speed, how long you've been using the
+                                        scooter, your traveling distance, and many more things all in an easy to use
+                                        app.</p>
+                                    <a href="#" class="button">Learn More</a>
+                                </div>
+                                <div class="adv__right">
+                                    <picture>
+                                        <!-- avif -->
+
+                                        <source type="image/avif"
+                                            srcset="./images/telemetry.png 1x, ./images/telemetry@2x.png  2x">
+
+
+                                        <!-- WebP -->
+
+                                        <source type="image/webp"
+                                            srcset="./images/hero.webp 1x, ./images/hero@2x.webp 2x">
+
+                                        <!-- PNG --> 
+                                        <img class="hero__img" src="./images/hero.png" alt=""
+                                            srcset="./images/telemetry.png 1x, ./images/telemetry@2x.png">
+                                    </picture>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+
     </main>
 
     <footer class="footer">
