--- a/index.html
+++ b/index.html
@@ -78,8 +78,6 @@
 
         </section>
 
-
-
         <section class="step">
             <div class="container">
                 <div class="step__container">
@@ -112,54 +110,74 @@
                 </div>
             </div>
         </section>
+        <section class="telemetry">
+            <div class="container telemetry__container">
+                <ul class="telemetry-list">
+                    <li class="telemetry-list__item">
+                        <div class="telemetry__left">
+                            <h2 class="telemetry__left__heading">Easy to use riding telemetry</h2>
+                            <p class="telemetry__left-text">The Scoot app is available with riding telemetry. This means
+                                it can
+                                show you your average speed, how long you've been using the scooter, your traveling
+                                distance, and many more things all in an easy to use app.</p>
 
+                            <a href="#" class="button">Learn More</a>
+                        </div>
+                        <div class="telemetry__right ">
+                            <div class="telemetry__right__wrapper">
 
+                                <img class="telemetry__right__wrapper__img" src="./images/telemetry.png" alt="telemetry">
+                                <img class="telemetry__right__wrapper__img" src="./images/telemetry.webp" alt="telemetry">
+                                <img class="telemetry__right__wrapper__img" src="./images/telemetry.avif" alt="telemetry">
 
-        <section class="adv">
-            <div class="container">
-                <div class="adv__container">
-                    <ul class="adv-list">
-                        <li class="adv-list__item">
-                            <div class="adv__wrapper">
-                                <div class="adv__left">
-                                    <h2 class="adv__left__heading">Easy to use riding telemetry</h2>
-                                    <p class="adv__left__text">The Scoot app is available with riding telemetry. This
-                                        means it can show you your average speed, how long you've been using the
-                                        scooter, your traveling distance, and many more things all in an easy to use
-                                        app.</p>
-                                    <a href="#" class="button">Learn More</a>
-                                </div>
-                                <div class="adv__right">
-                                    <picture>
-                                        <!-- avif -->
-
-                                        <source type="image/avif"
-                                            srcset="./images/telemetry.png 1x, ./images/telemetry@2x.png  2x">
-
-
-                                        <!-- WebP -->
-
-                                        <source type="image/webp"
-                                            srcset="./images/hero.webp 1x, ./images/hero@2x.webp 2x">
-
-                                        <!-- PNG --> 
-                                        <img class="hero__img" src="./images/hero.png" alt=""
-                                            srcset="./images/telemetry.png 1x, ./images/telemetry@2x.png">
-                                    </picture>
-                                </div>
                             </div>
-                        </li>
-                    </ul>
-                </div>
+                        </div>
+                    </li>
+                    <li class="telemetry-list__item">
+                        <div class="telemetry__left">
+                            <h2 class="telemetry__left__heading">Coming to a city near you</h2>
+                            <p class="telemetry__left-text">Scoot is available in 4 major cities so far. We’re expanding rapidly, so be sure to let us know if you want to see us in your hometown. We’re aiming to let our scooters loose on 23 cities over the coming year.</p>
+
+                            <a href="#" class="button">Learn More</a>
+                        </div>
+                        <div class="telemetry__right ">
+                            <div class="telemetry__right__wrapper">
+
+                                <img class="telemetry__right__wrapper__img" src="./images/city.png" alt="telemetry">
+                                <img class="telemetry__right__wrapper__img" src="./images/city.webp" alt="telemetry">
+                                <img class="telemetry__right__wrapper__img" src="./images/city.avif" alt="telemetry">
+
+                            </div>
+                        </div>
+                    </li>
+                    <li class="telemetry-list__item">
+                        <div class="telemetry__left">
+                            <h2 class="telemetry__left__heading">Zero hassle payments</h2>
+                            <p class="telemetry__left-text">Our payment is as easy as one two three. We accept most credit cards and debit cards. You can also link your PayPal account inside the app. Need to pay later? No worries! You can defer payment for up to a month.</p>
+
+                            <a href="#" class="button">Learn More</a>
+                        </div>
+                        <div class="telemetry__right ">
+                            <div class="telemetry__right__wrapper">
+
+                                <img class="telemetry__right__wrapper__img" src="./images/pay.png" alt="telemetry">
+                                <img class="telemetry__right__wrapper__img" src="./images/pay.webp" alt="telemetry">
+                                <img class="telemetry__right__wrapper__img" src="./images/pay.avif" alt="telemetry">
+
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+
             </div>
         </section>
 
+        
     </main>
 
     <footer class="footer">
         <div class="container">
-            <div class="footer__container">
-
+            <div class="footer__container"> 
             </div>
         </div>
     </footer>
