--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                     <li class="telemetry-list__item">
                         <div class="telemetry__left">
                             <h2 class="telemetry__left__heading">Coming to a city near you</h2>
-                            <p class="telemetry__left-text">Scoot is available in 4 major cities so far. We’re expanding rapidly, so be sure to let us know if you want to see us in your hometown. We’re aiming to let our scooters loose on 23 cities over the coming year.</p>
+                            <p class="telemetry__left-text">Scoot is available in 4 major cities so far. We`re expanding rapidly, so be sure to let us know if you want to see us in your hometown. We`re aiming to let our scooters loose on 23 cities over the coming year.</p>
 
                             <a href="#" class="button">Learn More</a>
                         </div>
@@ -173,6 +173,29 @@
         </section>
 
         
+        
+        <section class="app">
+            <div class="container">
+                <div class="app__container">
+                        <h2 class="app__heading">Sign up and Scoot off today</h2>
+
+                        <div class="app__wrapper">
+                            <span class="appstore">
+                                    <p class="appstore__text">Available on the</p>
+                                    <h3 class="appstore__heading">AppStore</h3>
+                            </span>
+                            <span class="googleplay">
+
+                                <p class="googleplay__text">Get it on</p>
+
+                                <h3 class="googleplay__heading">GooglePlay</h3>
+                            </span>
+                        </div>
+                </div>  
+            </div>
+        </section>
+
+
     </main>
 
     <footer class="footer">
