--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="container">
             <div class="header__container">
                 <div class="header__wrapper">
-                    <img src="./images/logo.svg" alt="logo scoot">
+                    <img src="./images/logo-header.svg" alt="logo scoot">
                     <nav class="nav">
                         <ul class="nav__list">
                             <li class="nav__list__item"><a class="nav__list__item__link" href="#">About</a></li>
@@ -126,9 +126,12 @@
                         <div class="telemetry__right ">
                             <div class="telemetry__right__wrapper">
 
-                                <img class="telemetry__right__wrapper__img" src="./images/telemetry.png" alt="telemetry">
-                                <img class="telemetry__right__wrapper__img" src="./images/telemetry.webp" alt="telemetry">
-                                <img class="telemetry__right__wrapper__img" src="./images/telemetry.avif" alt="telemetry">
+                                <img class="telemetry__right__wrapper__img" src="./images/telemetry.png" srcset="./images/telemetry@2x.png"
+                                    alt="telemetry">
+                                <img class="telemetry__right__wrapper__img" src="./images/telemetry.webp"  srcset="./images/telemetry@2x.webp"
+                                    alt="telemetry">
+                                <img class="telemetry__right__wrapper__img" src="./images/telemetry.avif"
+                                    alt="telemetry">
 
                             </div>
                         </div>
@@ -136,7 +139,9 @@
                     <li class="telemetry-list__item">
                         <div class="telemetry__left">
                             <h2 class="telemetry__left__heading">Coming to a city near you</h2>
-                            <p class="telemetry__left-text">Scoot is available in 4 major cities so far. We`re expanding rapidly, so be sure to let us know if you want to see us in your hometown. We`re aiming to let our scooters loose on 23 cities over the coming year.</p>
+                            <p class="telemetry__left-text">Scoot is available in 4 major cities so far. We`re expanding
+                                rapidly, so be sure to let us know if you want to see us in your hometown. We`re aiming
+                                to let our scooters loose on 23 cities over the coming year.</p>
 
                             <a href="#" class="button">Learn More</a>
                         </div>
@@ -153,7 +158,9 @@
                     <li class="telemetry-list__item">
                         <div class="telemetry__left">
                             <h2 class="telemetry__left__heading">Zero hassle payments</h2>
-                            <p class="telemetry__left-text">Our payment is as easy as one two three. We accept most credit cards and debit cards. You can also link your PayPal account inside the app. Need to pay later? No worries! You can defer payment for up to a month.</p>
+                            <p class="telemetry__left-text">Our payment is as easy as one two three. We accept most
+                                credit cards and debit cards. You can also link your PayPal account inside the app. Need
+                                to pay later? No worries! You can defer payment for up to a month.</p>
 
                             <a href="#" class="button">Learn More</a>
                         </div>
@@ -172,26 +179,26 @@
             </div>
         </section>
 
-        
-        
+
+
         <section class="app">
             <div class="container">
                 <div class="app__container">
-                        <h2 class="app__heading">Sign up and Scoot off today</h2>
+                    <h2 class="app__heading">Sign up and Scoot off today</h2>
 
-                        <div class="app__wrapper">
-                            <span class="appstore">
-                                    <p class="appstore__text">Available on the</p>
-                                    <h3 class="appstore__heading">AppStore</h3>
-                            </span>
-                            <span class="googleplay">
+                    <div class="app__wrapper">
+                        <a href="#" class="appstore">
 
-                                <p class="googleplay__text">Get it on</p>
+                            <p class="appstore__text">Available on the</p>
+                            <h3 class="appstore__heading">AppStore</h3>
+                        </a>
+                        <a class="googleplay" href="#">
+                            <p class="googleplay__text">Get it on</p>
 
-                                <h3 class="googleplay__heading">GooglePlay</h3>
-                            </span>
-                        </div>
-                </div>  
+                            <h3 class="googleplay__heading">GooglePlay</h3>
+                        </a>
+                    </div>
+                </div>
             </div>
         </section>
 
@@ -200,7 +207,33 @@
 
     <footer class="footer">
         <div class="container">
-            <div class="footer__container"> 
+            <div class="footer__container">
+
+                <nav class="nav-footer">
+                    <ul class="nav-footer__list">
+                        <li class="nav-footer__list__item"><a class="nav-footer__list__item__link" href="#">
+                            <img class="footer-logo" src="./images/logo-footer.svg" alt=""> </a>
+                        <li class="nav-footer__list__item"><a class="nav-footer__list__item__link" href="#">About</a>
+                        </li>
+                        <li class="nav-footer__list__item"><a class="nav-footer__list__item__link" href="#">Location</a>
+                        </li>
+                        <li class="nav-footer__list__item"><a class="nav-footer__list__item__link" href="#">Careers</a>
+                        </li>
+                    </ul>
+
+
+                </nav>
+                <ul class="footer-link-list">
+                    <li class="footer-link-list__item">
+                        <a href="#"><img src="./images/facebook.svg" alt="facebook"></a>
+                    </li>
+                    <li class="footer-link-list__item">
+                        <a href="#"><img src="./images/twitter.svg" alt="twitter"></a>
+                    </li>
+                    <li class="footer-link-list__item">
+                        <a href="#"><img src="./images/instagram.svg" alt="instagram.svg"></a>
+                    </li>
+                </ul>
             </div>
         </div>
     </footer>
