--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                                     alt="telemetry">
                                 <img class="telemetry__right__wrapper__img" src="./images/telemetry.webp"  srcset="./images/telemetry@2x.webp"
                                     alt="telemetry">
-                                <img class="telemetry__right__wrapper__img" src="./images/telemetry.avif"
+                                <img class="telemetry__right__wrapper__img" src="./images/telemetry@2x.avif"
                                     alt="telemetry">
 
                             </div>
