--- a/index.html
+++ b/index.html
@@ -126,10 +126,10 @@
                         <div class="telemetry__right ">
                             <div class="telemetry__right__wrapper">
 
-                                <img class="telemetry__right__wrapper__img" src="./images/telemetry.png" srcset="./images/telemetry@2x.png"
-                                    alt="telemetry">
-                                <img class="telemetry__right__wrapper__img" src="./images/telemetry.webp"  srcset="./images/telemetry@2x.webp"
-                                    alt="telemetry">
+                                <img class="telemetry__right__wrapper__img" src="./images/telemetry.png"
+                                    srcset="./images/telemetry@2x.png" alt="telemetry">
+                                <img class="telemetry__right__wrapper__img" src="./images/telemetry.webp"
+                                    srcset="./images/telemetry@2x.webp" alt="telemetry">
                                 <img class="telemetry__right__wrapper__img" src="./images/telemetry@2x.avif"
                                     alt="telemetry">
 
@@ -211,8 +211,9 @@
 
                 <nav class="nav-footer">
                     <ul class="nav-footer__list">
-                        <li class="nav-footer__list__item"><a class="nav-footer__list__item__link" href="#">
-                            <img class="footer-logo" src="./images/logo-footer.svg" alt=""> </a>
+                        <li class="nav-footer__list__item">
+                                <img class="footer-logo" src="./images/logo-footer.svg" alt="">
+                        </li>
                         <li class="nav-footer__list__item"><a class="nav-footer__list__item__link" href="#">About</a>
                         </li>
                         <li class="nav-footer__list__item"><a class="nav-footer__list__item__link" href="#">Location</a>
