--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
     <meta name="description" content="scoot">
+    <link rel="icon" type="image/x-icon" href="./images/favicon.svg">
     <link rel="stylesheet" href="css/main.css">
     <title>Scoot</title>
 </head>
@@ -212,7 +213,7 @@
                 <nav class="nav-footer">
                     <ul class="nav-footer__list">
                         <li class="nav-footer__list__item">
-                                <img class="footer-logo" src="./images/logo-footer.svg" alt="">
+                            <img class="footer-logo" src="./images/logo-footer.svg" alt="">
                         </li>
                         <li class="nav-footer__list__item"><a class="nav-footer__list__item__link" href="#">About</a>
                         </li>
