--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <h1 class="visually-hidden"></h1>
+    <h1 class="visually-hidden">Scoot</h1>
     <header class="header">
         <div class="container">
             <div class="header__container">
@@ -23,29 +23,22 @@
                             <li class="nav__list__item"><a class="nav__list__item__link" href="#">Location</a></li>
                             <li class="nav__list__item"><a class="nav__list__item__link" href="#">Careers</a></li>
                         </ul>
-
-
                     </nav>
-
                 </div>
-
-
                 <label class="label">
                     <input class="menu-checkbox" type="checkbox" name="menu">
                     <span class="burger">
-
                     </span>
                     <div class="nav-mobile">
-                        <!--disabled-->
                         <ul class="nav-mobile__list">
-                            <li class="nav-mobile__list__item"><a class="nav-mobile__list__item__link"
-                                    href="#">About</a>
+                            <li class="nav-mobile__list__item">
+                                <a class="nav-mobile__list__item__link" href="#">About</a>
                             </li>
-                            <li class="nav-mobile__list__item"><a class="nav-mobile__list__item__link"
-                                    href="#">Location</a>
+                            <li class="nav-mobile__list__item">
+                                <a class="nav-mobile__list__item__link" href="#">Location</a>
                             </li>
-                            <li class="nav-mobile__list__item"><a class="nav-mobile__list__item__link"
-                                    href="#">Careers</a>
+                            <li class="nav-mobile__list__item">
+                                <a class="nav-mobile__list__item__link" href="#">Careers</a>
                             </li>
                         </ul>
                         <a class="button mobile-btn" href="#">Get Scootin</a>
@@ -60,12 +53,13 @@
     <main class="main">
 
         <section class="hero">
+
+            <h2 class="visually-hidden">hero</h2>
             <div class="container   hero__container">
                 <div class="hero__inner-container">
                     <div class="hero__wrapper">
-                        <h2 class="hero__heading">Scooter sharing made simple</h2>
+                        <h3 class="hero__heading">Scooter sharing made simple</h3>
                         <div class="hero__inner__wrapper">
-
                             <p class="hero__text">
                                 Scoot takes the hassle out of urban mobility. Our bikes are placed in convenient
                                 locations in each of our cities. Use our app to locate the nearest bike, unlock it with
@@ -80,6 +74,7 @@
         </section>
 
         <section class="step">
+            <h2 class="visually-hidden">steps</h2>
             <div class="container">
                 <div class="step__container">
                     <ul class="step-list">
@@ -112,11 +107,13 @@
             </div>
         </section>
         <section class="telemetry">
+
+            <h2 class="visually-hidden">telemetry</h2>
             <div class="container telemetry__container">
                 <ul class="telemetry-list">
                     <li class="telemetry-list__item">
                         <div class="telemetry__left">
-                            <h2 class="telemetry__left__heading">Easy to use riding telemetry</h2>
+                            <h3 class="telemetry__left__heading">Easy to use riding telemetry</h3>
                             <p class="telemetry__left-text">The Scoot app is available with riding telemetry. This means
                                 it can
                                 show you your average speed, how long you've been using the scooter, your traveling
@@ -139,7 +136,7 @@
                     </li>
                     <li class="telemetry-list__item">
                         <div class="telemetry__left">
-                            <h2 class="telemetry__left__heading">Coming to a city near you</h2>
+                            <h3 class="telemetry__left__heading">Coming to a city near you</h3>
                             <p class="telemetry__left-text">Scoot is available in 4 major cities so far. We`re expanding
                                 rapidly, so be sure to let us know if you want to see us in your hometown. We`re aiming
                                 to let our scooters loose on 23 cities over the coming year.</p>
@@ -158,7 +155,7 @@
                     </li>
                     <li class="telemetry-list__item">
                         <div class="telemetry__left">
-                            <h2 class="telemetry__left__heading">Zero hassle payments</h2>
+                            <h3 class="telemetry__left__heading">Zero hassle payments</h3>
                             <p class="telemetry__left-text">Our payment is as easy as one two three. We accept most
                                 credit cards and debit cards. You can also link your PayPal account inside the app. Need
                                 to pay later? No worries! You can defer payment for up to a month.</p>
@@ -183,20 +180,22 @@
 
 
         <section class="app">
+            
+    <h2 class="visually-hidden">Download</h2>
             <div class="container">
                 <div class="app__container">
-                    <h2 class="app__heading">Sign up and Scoot off today</h2>
+                    <h3 class="app__heading">Sign up and Scoot off today</h3>
 
                     <div class="app__wrapper">
                         <a href="#" class="appstore">
 
                             <p class="appstore__text">Available on the</p>
-                            <h3 class="appstore__heading">AppStore</h3>
+                            <h4 class="appstore__heading">AppStore</h4>
                         </a>
                         <a class="googleplay" href="#">
                             <p class="googleplay__text">Get it on</p>
 
-                            <h3 class="googleplay__heading">GooglePlay</h3>
+                            <h4 class="googleplay__heading">GooglePlay</h4>
                         </a>
                     </div>
                 </div>
